--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,24 @@
 ---
 title: "Nan Zhang, PhD"
+image: mypic.jpg
+about:
+  template: trestles
+  image-shape: rectangle
+  image-width: 15em
+  links:
+    - text: Email
+      icon: envelope
+      href: mailto:n.zhang@uni-mannheim.de
+    - text: scholar
+      icon: google
+      href: https://scholar.google.com/citations?user=xZj-ZpEAAAAJ&hl=en
+    - text: CV
+      icon: filetype-pdf
+      href: CV.pdf
 ---
 
-This is a Quarto website.
+I am Interim Professor ("Vertretungsprofessor") of [Evidence-based Political Research](https://www.sowi.uni-mannheim.de/zhang/) at the University of Mannheim, where I also head the Emmy-Noether research group Making Diversity Work at the [Mannheim Centre for European Social Research (MZES)](mzes.uni-mannheim.de/d7/en). My work spans both Political Science and Sociology, with a focus on the study of group relations, language and identity, social norms, and civic behavior. Major applications include research on immigration, ethnic diversity, and state- and nation-building.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+My work has been published in the *American Political Science Review*, the *American Journal of Political Science*, the *Journal of Politics*, the *Proceedings of the National Academy of Sciences (PNAS)*, the *American Journal of Sociology*, and the *European Sociological Review*, amongst other outlets.
 
-```{r}
-1 + 1
-```
+I hold a Ph.D. in Political Science from Stanford University, a J.D. from Stanford Law School, and a double B.A. in Economics and Political Science from the University of California, Berkeley. I have held prior positions at the Max Planck Institute for Research on Collective Goods and the European University Institute.
