--- a/research.qmd
+++ b/research.qmd
@@ -1,9 +1,142 @@
 ---
-title: "Research"
+title: ""
 ---
 
-About this site
+# Publications
 
-```{r}
-1 + 1
-```
+
+[18] **Ethnic Diversity and Cooperation: Evidence from a Lost Letter Experiment.** (with Alexandra Kommol).   
+*Journal of Ethnic and Migration Studies*, 2024, 50(18): 4600-4620. 
+[{{< bi link-45deg color=blue size=1em >}}](https://www.tandfonline.com/doi/full/10.1080/1369183X.2024.2334909) 
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.tandfonline.com/doi/epdf/10.1080/1369183X.2024.2334909?needAccess=true)
+
+
+[17] **Cultural Adaptation and Demographic Change: Evidence from Mexican-American Naming Patterns During the California Gold Rush.** (with Maria Abascal).  
+*Journal of Ethnic and Migration Studies*, 2024, 50(1): 132 - 148. 
+[{{< bi link-45deg color=blue size=1em >}}](https://www.tandfonline.com/doi/full/10.1080/1369183X.2023.2259039) 
+
+
+[16] **From Pluribus to Unum? The Civil War and Imagined Sovereignty in 19th Century America**.   
+(with Melissa Lee and Tilmann Herchenröder).  
+*American Political Science Review*, 2024, 118(1): 127 - 143. 
+[{{< bi link-45deg color=blue size=1em >}}](https://doi.org/10.1017/S0003055423000096) 
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.cambridge.org/core/services/aop-cambridge-core/content/view/209A985C6BFB23E4B7B3E46FC22FF513/S0003055423000096a.pdf/from-pluribus-to-unum-the-civil-war-and-imagined-sovereignty-in-nineteenth-century-america.pdf)
+
+
+[15] **Norms of Prejudice: Political Identity and Polarization**.   
+(with Amalia Álvarez-Benjumea and Fabian Winter).   
+*Philosophical Transactions of the Royal Society B*, 2024, 379(1897): 20230030. 
+[{{< bi link-45deg color=blue size=1em >}}](https://royalsocietypublishing.org/doi/10.1098/rstb.2023.0030) 
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://royalsocietypublishing.org/doi/epdf/10.1098/rstb.2023.0030)
+
+
+[14] **The Effects of Combating Corruption on Institutional Trust and Political Engagement: Evidence from Latin America.**  (with Mathias Poertner).   
+*Political Science Research and Methods*, 2024, 12(3): 633 - 642. 
+[{{< bi link-45deg color=blue size=1em >}}](https://doi.org/10.1017/psrm.2023.4) 
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.cambridge.org/core/services/aop-cambridge-core/content/view/60F64403542AEAF4895D94DE2F0CA516/S2049847023000043a.pdf/the-effects-of-combating-corruption-on-institutional-trust-and-political-engagement-evidence-from-latin-america.pdf)
+
+
+[13] **No Differential Effects of Classroom Ethnic Composition on Native and Immigrant Friendship Segregation: A Comment on Smith et al. 2016**.   
+(with David Kretschmer, Johanna Gereke, and Fabian Winter).   
+*American Journal of Sociology* 2023, 129(2): 570–585.
+[{{< bi link-45deg color=blue size=1em >}}](https://www.journals.uchicago.edu/doi/10.1086/727823) 
+
+
+
+[12] **Observing Many Researchers Using the Same Data and Hypothesis Reveals a Hidden Universe of Uncertainty.** (with Nate Breznau, Eike Mark Rinke, Alexander Wuttke, Hung H.V. Nguyen and 160 others).   
+*Proceedings of the National Academy of Sciences*, 2022, 119(44):e2203150119.
+[{{< bi link-45deg color=blue size=1em >}}](https://doi.org/10.1073/pnas.2203150119) 
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.pnas.org/doi/epub/10.1073/pnas.2203150119)
+
+
+
+[11] **Demographic change and group boundaries in Germany: The effect of projected demographic decline on perceptions of who has a migration background**. (with Johanna Gereke and 14 others).    
+*Sociological Science*, 2022, 9(9):206-220.
+[{{< bi link-45deg color=blue size=1em >}}](https://sociologicalscience.com/articles-v9-9-206/)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://sociologicalscience.com/download/vol-9/may/SocSci_v9_206to220.pdf)
+
+
+[10] **Everyday Discrimination in Public Spaces: A Field Experiment in the Milan Metro**.   
+(with Johanna Gereke and Delia Baldassarri).   
+*European Sociological Review*, 2022, 38(5):679-693.
+[{{< bi link-45deg color=blue size=1em >}}](https://academic.oup.com/esr/article/38/5/679/6524578)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://watermark.silverchair.com/jcac008.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAA00wggNJBgkqhkiG9w0BBwagggM6MIIDNgIBADCCAy8GCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMqJ3YBEYr2lDcW7N1AgEQgIIDAIZ9Lsuoh_yiRjk6HJUYON25YILQSSj9ie24C7WMZHm4zD7cWlR0KbcqkbfS3yVgf83D_8U1jzTvLdeuqKcCVrNiTjX5xHW6Qca6AJMaGgDDxjgp3FyEoA2Z_J6EoCsOMTh1GEhckoN_6JTogK7haBnZyf8ZWXWwXH4lwzytjRYHdIpG5ywzJy97-13clvL94ovS_oOuUhLMQZAQlCLbiombwE_Rzt3Ra5twM3z8qSyEVHtVApyFFyAM9nDXBbRn1y-3U2btmyLMm-MFkqVHYgwZ741ZlAddJEhHUQvEZBL-u20bFHCQ_N4nwRuivIsxvmn4zEFxr7FTDkXiCRZQQ5XAA0j7WUEC0RR17mZwCAd-qq2my7SAxJMlUc8LI41RvdmlU2tq6R3PHayYxs2Ve6VYmOowPwwwqDn-KI2vKHih6Ke6FvU8yHXBFDmbKrI1jY4AnPWcP8yZQ2rtQR9FCL_ZstaMbP2m_Hw-rvoC4_vjceHi6EENi4lQqK--NJG8csJKBWH64h2t_G6VU7DS37Mvwll78mBXoo11y_NT08nkS6O5Sa5B4mv9dLx-tc1znZ1iqVtnBdxOeyGWYmIIJbFtkgjgYve4A0kngP0V8cyYQN2gqJc0sONUrNTr7B_SDP6iQL3NrvVvP_uc5-IZRnXderVBQvZHJj0j-OX89IbuKC9qRcUU6AVFZzL0LYAZfe-DN2pGijpDiq5duKkyAgvq6Cuv5xP8j1iGMMaYGH8U5yhVQb9ThsSYrs2RhyRLNq6i4mYlXtUtBlnIFdofUi2RtrRrwS7Xc4vO9u1ms2vljXp7Caq1o6oA0Gy8IpQubSUE6MXaNNJGuLZOPDZDjP18qMR5JPGhKUZJ-y9LphIiwTv0bJnDFGB8DttSmA0K1knVYmpl3RCWURHSSUZBlcUTj2yo0WCWAICY13Oe9vtZhSBo8wUQHCNnrUZybQMOR-xF9ca83qQAZuEtLUtvu5X_QIhoM3fLZUl9CtAouwZnKHRb1mg1UT2ZEerhCdiz-Q)
+
+
+
+[9] **Literacy and State-Society Interactions in 19th Century France.** (with Melissa Lee).   
+*American Journal of Political Science*, 2020, 64(4): 1001-1016. 
+[{{< bi link-45deg color=blue size=1em >}}](https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12524?af=R)
+
+::: {.callout-note appearance="minimal"}
+Winner: 2020 Best Article Prize, European Politics and Society Section, American Political Science Association
+:::
+
+
+[8] **Prosocial Behavior in Interethnic Encounters: Evidence from a Field Experiment with High- and Low-Status Immigrants.**
+(with Amelie Aidenberger, Heiko Rauhut and Fabian Winter).  
+*European Sociological Review*, 2019, 35(4): 582–597. 
+[{{< bi link-45deg color=blue size=1em >}}](https://academic.oup.com/esr/article/35/4/582/5512302)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://watermark.silverchair.com/jcz030.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAA0swggNHBgkqhkiG9w0BBwagggM4MIIDNAIBADCCAy0GCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM-x-mCk0s6EWZMDdwAgEQgIIC_sPPS3NJgORqfDCaeM1xmmPuMdNUlt-S9TA6CSWv2VIVk7J_LgrHTWU3fH_LmME4YM98wJecy5bEJ-2_QZiTq8yzdnIxzQQF_0YDkpnuwj0HK3mW7j7KLaSo3rKTKCAuH7rlHE-mNs21mpHBQLGTVcFEqril4Em2SuTexMO7_uHurDDcWjhfNKxgaGM1t_sXPOwSrg6nnaYP2H92657D_Mizz-QV0hyb2BxirQzhI7ZdeC-Ee7WHXyBHYTxf8JRLLh5xWvWrknaGvYAW5FINg43sDDrRfpHYcqjonwfEJGNQKY-u4K7TTM8Tr1netSaRbHUf6bv9AnSgnWp0l0GDIR5frlKpnJjYfy2RWpr3ymizo4L5JJxe7usIqxZJmjtwkvtzq9rkzeQg-Mpauyn3R0TVNiBibOvRf73KUiEcm0wHXVFTZk0_j2GZGoCKcrONQhlOwPv8kz8Lvrklrjt0OdlPhnIh0fXHl1-nla7DYuxc6tp7uhVfPyEbv58jSm_yvxxMHi-KTQgGNQdvwIJE9V1z_O9k5SJDPUPC_v8RpfKs9e_y9VbGcd6kkL4YVL956OLu45VfNpbquFeW2tSDjZAFxKItDoRAZWPTL9Z8uhWv-nLBoGh4kRu694aaCQSp6ZDbw3EYtEajqwOaV6pmqwym2Bvo3GpHLtspkw3W1DgZvYHClPwtsdYDhdVp5fLIfMZoq4khU7laJOR8uh4T2CLHRyoWVGBsnMn9PtNt74F_VPJZYWSditBqD9lJi_gI0Szo5R8luh9yXLgxWjDJcLm7u8djr1Gy2O1WV0Vqm1Lj99G4mDYMVI6mgG4j0zROhlz4ygrQn00D3La1Buw4hkLEr-3v1uZwwwLUu85bNWF9gC5WduOGfupz23xtWj41sog6nDMWbX6qRdMvQ0fcqdoLfYnLpvRvKmOiyleg3HkLz-ajWj13LW57jVTE14b3d4KLdN2ncG7EE3GJrr1CsQyBibzLO3JXULBlj2ns3ycGBs0MWIPcHk6u1VDcorY)
+
+::: {.callout-caution appearance="minimal"}
+Winner: European Sociological Review Best Article of the Year Prize 2020
+:::
+
+
+[7] **Social Norm Enforcement in Ethnically Diverse Communities**. (with Fabian Winter).   
+*Proceedings of the National Academy of Sciences*, 2018, 115(11): 2722-2727.
+[{{< bi link-45deg color=blue size=1em >}}](https://www.pnas.org/doi/10.1073/pnas.1718309115)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.pnas.org/doi/epdf/10.1073/pnas.1718309115)
+
+
+[6] **Institutions, Norms, and Accountability: A Corruption Experiment with Northern and Southern Italians**. 
+*Journal of Experimental Political Science*, 2018, 5(1): 11-25.
+[{{< bi link-45deg color=blue size=1em >}}](https://doi.org/10.1017/XPS.2017.26)
+
+
+[5] **Legibility and the Informational Foundations of State Capacity**. (with Melissa Lee).   
+The **Journal of Politics**, 2017, 79(1): 118–132.
+[{{< bi link-45deg color=blue size=1em >}}](https://www.journals.uchicago.edu/doi/full/10.1086/688053)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.journals.uchicago.edu/doi/epdf/10.1086/688053)
+
+
+[4] **Willing to Pay? An Experimental Analysis of Tax Compliance in Britain and Italy**.   
+(with Giulia Andrighetto, Stefania Ottone, Ferruccio Ponzano, and Sven Steinmo).   
+*PLoS ONE*, 2016, 11(2): e0150277.
+[{{< bi link-45deg color=blue size=1em >}}](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0150277)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0150277&type=printable)
+
+
+[3] **Are Some Countries More Honest than Others? Evidence from a Tax Compliance Experiment in Sweden and Italy**. (with Giulia Andrighetto,  John D'Attoma, Stefania Ottone, Ferruccio Ponzano, and Sven Steinmo).   
+*Frontiers in Psychology*, 2016, 7: 472.
+[{{< bi link-45deg color=blue size=1em >}}](https://www.frontiersin.org/journals/psychology/articles/10.3389/fpsyg.2016.00472/full)
+[{{< bi file-earmark-pdf color=red size=1em >}}](https://www.readcube.com/articles/10.3389/fpsyg.2016.00472)
+
+
+[2] **Changing a ‘Culture’ of Corruption: Evidence from an Economic Experiment in Italy**.   *Rationality & Society*, 2015, 27(4): 387-413.
+[{{< bi link-45deg color=blue size=1em >}}](https://journals.sagepub.com/doi/abs/10.1177/1043463115605475)
+
+
+[1] **"Political Culture"** in the *Oxford Companion to Comparative Politics*. Joel Krieger (ed). (with David Laitin).  New York: Oxford University Press.
+
+------------------------------------------------------------------------
+
+# Selected Working Papers
+
+**Military Service and Immigrants’ Assimilation: Evidence from the Vietnam Draft Lotteries**.  
+(with Melissa Lee).
+
+**Cross-cutting Cleavages and Native-Refugee Contact: Evidence from Germany**.   
+(with Alexandra Kommol).
+
+
+**The Upside of Prejudice: Do Muslims in Europe Enjoy a Religious Trust Premium?**.  
+(with Joshua Hellyer, Yavar Fadavi Asghari, and Johanna Gereke).
+
+
+**The Girl Next Door? Childhood Cross-Group Exposure and Ethnic Inter-Marriage**.   
+(with Leonard Wendering and Kerstin Ostermann).
+
+**Non-Compliance in Survey Experiments with Placebo Treatments**.   
+(with Delia Baldassarri).
