--- a/teaching.qmd
+++ b/teaching.qmd
@@ -1,3 +1,31 @@
 ---
 title: "Teaching"
 ---
+
+---
+
+### Causal Inference Tutorials
+
+Currently, I am offering regular tutorials ("Übungen") in each of the three Political Science modules, with a focus on experiments and causal inference.
+
+These courses will teach students how to analyze questions from their subfiled of interest through the application of causal inference methods. 
+
+We will begin by asking what it means for X to cause Y using the framework of potential outcomes. We will then look at some of the most popular research designs in causal analysis including experiments, regression discontinuity designs, difference-in-differences / two-way fixed effects, and instrumental variables.
+
+Students will learn to apply these methods to real data in R.
+
+The overarching goal is to provide students with the foundation to perform their own analyses (e.g. for their BA theses) by transferring the acquired skills to their research interests.
+
+You may find the link to each of the tutorials here:
+
+[Political Sociology](), &nbsp; [International Relations](), &nbsp; [Comparative Politics]()
+
+---
+
+### BA Thesis Colloquium in International Relations
+
+This course involves support for writing a BA thesis in political science. 
+
+Students will need to design and carry a research strategy that includes (i) identifying an original contribution to a body of literature, (ii) finding or generating appropriate data, and (iii) conducting a rigorous data analysis. 
+
+This colloquium is designed to help students progress along each of these steps by providing periodic feedback from the instructor.
