--- a/research.qmd
+++ b/research.qmd
@@ -4,7 +4,6 @@ title: ""
 
 # Publications
 
-
 [18] **Ethnic Diversity and Cooperation: Evidence from a Lost Letter Experiment.** (with Alexandra Kommol).   
 *Journal of Ethnic and Migration Studies*, 2024, 50(18): 4600-4620. 
 [{{< bi link-45deg color=blue size=1em >}}](https://www.tandfonline.com/doi/full/10.1080/1369183X.2024.2334909) 
@@ -120,23 +119,51 @@ The **Journal of Politics**, 2017, 79(1): 118–132.
 
 [1] **"Political Culture"** in the *Oxford Companion to Comparative Politics*. Joel Krieger (ed). (with David Laitin).  New York: Oxford University Press.
 
-------------------------------------------------------------------------
+
+---
 
 # Selected Working Papers
 
 **Military Service and Immigrants’ Assimilation: Evidence from the Vietnam Draft Lotteries**.  
 (with Melissa Lee).
 
+<details>
+<summary>Abstract</summary>
+Seminal theories in political science argue that military service is a critical driver of peripheral minorities' integration into the mainstream. However, a major obstacle bedeviling the study of military service and integration is self-selection: individuals who are better assimilated may be more likely to join the military in the first place. We address the selection problem by examining the effects of military conscription during the Vietnam War using an instrumental variables approach. Conscription during 1970-- 1972 was decided on the basis of national draft lotteries that assigned draft numbers based on an individual's date of birth. Using the draft lottery instrument, we find no evidence of a causal effect of military service on a range of integration outcomes from the 2000 decennial census. At least for the Vietnam era, the link between service and integration is largely driven by self-selection, which points to important scope conditions for the integrationist view.
+</details>
+
 **Cross-cutting Cleavages and Native-Refugee Contact: Evidence from Germany**.   
 (with Alexandra Kommol).
 
+<details>
+<summary>Abstract</summary>
+The arrival of large numbers of asylum seekers in many European countries has raised critical questions concerning refugee integration. While prior research has examined individual characteristics (e.g. refugees’ educational attainment) and contextual conditions (e.g. local unemployment rates) as additive factors underlying social integration, we argue that complementarities between individual refugees and their place of resettlement can further enhance refugee-native contacts. Specifically, we focus on marital status as a key “milestone” shaping individuals’ social networks and study the influence of marital status similarity between indi- vidual refugees and their host communities. Using data from the IAB-BAMF-SOEP Survey of Refugees and leveraging the exogenous assignment of asylum seekers in Germany, we show that marital status similarity increases refugee-native contacts for all refugee groups except single refugee men. Importantly, the effects of contextual similarity are especially pronounced amongst female refugees, a group which tends to report fewer interactions with natives in the first place. Overall, we conclude refugees may stand to benefit from allocation policies that take “contextual fit” into account when assigning asylum seekers to places of residence.
+</details>
 
 **The Upside of Prejudice: Do Muslims in Europe Enjoy a Religious Trust Premium?**.  
 (with Joshua Hellyer, Yavar Fadavi Asghari, and Johanna Gereke).
 
+<details>
+<summary>Abstract</summary>
+Muslim immigrants in European societies are often perceived as more religious than their Christian counterparts. Such traditional religiosity is seen as conflicting with modern, liberal values, thereby contributing to Islamophobia. However, could Muslims' putative religiosity paradoxically increase their perceived trustworthiness? Drawing on research  suggesting that religiosity signals benevolent intentions, we test whether religious Muslims indeed benefit from a "trust premium". Combining insights from both population-based survey experiments and a lab-in-the-field experiment in Germany, we find that outwardly-religious Muslims are indeed (i) perceived as more trustworthy, and (ii) trusted more in monetary exchanges. The results indicate that perceived religiosity among Muslims in Europe may act as a social asset, thereby challenging prevailing narratives of Islam in Christian-heritage societies.
+</details>
 
 **The Girl Next Door? Childhood Cross-Group Exposure and Ethnic Inter-Marriage**.   
 (with Leonard Wendering and Kerstin Ostermann).
 
+<details>
+<summary>Abstract</summary>
+This study investigates the long-term effects of early-life inter-ethnic exposure on social integration outcomes focusing on the late 19th-century United States. Utilizing linked historical census data from  1880 and 1900, we analyze how the ethnic identity of childhood neighbors influences adult marriage choices. We employ hierarchical density-based spatial clustering to delineate historical ethnic neighborhoods, and use coarsened exact matching to identify "exposed" and "unexposed" individuals within the same  urban geographies. Even after accounting for (parents') residential choices,  we find that individuals growing up next to an ethnic outgroup family are significantly more likely to marry into their childhood neighbor’s ethnic group. These results are broadly in line with Contact Theory, and highlight the enduring impact of early intergroup interactions on long-term social integration.
+</details>
+
 **Non-Compliance in Survey Experiments with Placebo Treatments**.   
 (with Delia Baldassarri).
+
+<details>
+<summary>Abstract</summary>
+Survey experiments often utilize placebo controls which aim to mimic the treatment condition while leaving the key explanatory variable unaffected. We illustrate the problems that can arise under placebo-controlled designs when compliance with treat- ment assignment is imperfect (e.g. when respondents are inattentive to experimental manipulations). We argue that estimating complier average causal effects (CACEs) under these conditions requires either (i) the inclusion of a “pure control” condition involving no experimental manipulation, or (ii) the strong assumption that compliance profiles are balanced across the treatment and placebo arms. We illustrate these points with data from a “failed” survey experiment on how the performance of ethnic minorities affects processes of social categoriazion.
+</details>
+
+
+
+
