--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ about:
       href: CV.pdf
 ---
 
-I am Interim Professor ("Vertretungsprofessor") of [Evidence-based Political Research](https://www.sowi.uni-mannheim.de/zhang/) at the University of Mannheim, where I also head the Emmy-Noether research group Making Diversity Work at the [Mannheim Centre for European Social Research (MZES)](mzes.uni-mannheim.de/d7/en). My work spans both Political Science and Sociology, with a focus on the study of group relations, language and identity, social norms, and civic behavior. Major applications include research on immigration, ethnic diversity, and state- and nation-building.
+I am Professor of [Evidence-based Political Research](https://www.sowi.uni-mannheim.de/zhang/) at the University of Mannheim, where I also head the Emmy-Noether research group Making Diversity Work at the [Mannheim Centre for European Social Research (MZES)](mzes.uni-mannheim.de/d7/en). My work spans both Political Science and Sociology, with a focus on the study of group relations, language and identity, social norms, and civic behavior. Major applications include research on immigration, ethnic diversity, and state- and nation-building.
 
 My work has been published in the *American Political Science Review*, the *American Journal of Political Science*, the *Journal of Politics*, the *Proceedings of the National Academy of Sciences (PNAS)*, the *American Journal of Sociology*, and the *European Sociological Review*, amongst other outlets.
 
