--- a/research.qmd
+++ b/research.qmd
@@ -5,7 +5,7 @@ title: ""
 # Publications
 
 
-**Military Service and Immigrants’ Assimilation: Evidence from the Vietnam Draft Lotteries**.  
+[19] **Military Service and Immigrants’ Assimilation: Evidence from the Vietnam Draft Lotteries**.  
 (with Melissa Lee).
 Conditionally accepted in the *American Political Science Review*.
 
