--- a/research.qmd
+++ b/research.qmd
@@ -155,12 +155,12 @@ The arrival of large numbers of asylum seekers in many European countries has ra
 Muslim immigrants in European societies are often perceived as more religious than their Christian counterparts. Such traditional religiosity is seen as conflicting with modern, liberal values, thereby contributing to Islamophobia. However, could Muslims' putative religiosity paradoxically increase their perceived trustworthiness? Drawing on research  suggesting that religiosity signals benevolent intentions, we test whether religious Muslims indeed benefit from a "trust premium". Combining insights from both population-based survey experiments and a lab-in-the-field experiment in Germany, we find that outwardly-religious Muslims are indeed (i) perceived as more trustworthy, and (ii) trusted more in monetary exchanges. The results indicate that perceived religiosity among Muslims in Europe may act as a social asset, thereby challenging prevailing narratives of Islam in Christian-heritage societies.
 </details>
 
-**The Girl Next Door? Childhood Cross-Group Exposure and Ethnic Inter-Marriage**.   
+**Childhood Exposure to Ethnic Outgroups Predicts Inter-ethnic Marriage**.   
 (with Leonard Wendering and Kerstin Ostermann).
 
 <details>
 <summary>Abstract</summary>
-This study investigates the long-term effects of early-life inter-ethnic exposure on social integration outcomes focusing on the late 19th-century United States. Utilizing linked historical census data from  1880 and 1900, we analyze how the ethnic identity of childhood neighbors influences adult marriage choices. We employ hierarchical density-based spatial clustering to delineate historical ethnic neighborhoods, and use coarsened exact matching to identify "exposed" and "unexposed" individuals within the same  urban geographies. Even after accounting for (parents') residential choices,  we find that individuals growing up next to an ethnic outgroup family are significantly more likely to marry into their childhood neighbor’s ethnic group. These results are broadly in line with Contact Theory, and highlight the enduring impact of early intergroup interactions on long-term social integration.
+Scholars posit that childhood exposure to ethnic outgroups may durably improve intergroup relations. To date, however, few studies are able to track the consequences of childhood experiences across multiple decades. Moreover, existing research focuses overwhelming on majority populations and largely overlooks the consequences of exposure for minority groups. Using linked geocoded US census records from 1880 to 1900/1910, we analyze the impact of having childhood neighbors of a different ethnicity on subsequent marriage patterns for over 400,000 American, German and Irish men. To account for residential self-selection, we apply a machine-learning algorithm to identify historic ``ethnic" neighborhoods and compare individuals similar on sociodemographic and neighborhood characteristics, but who differ in the identity of their next-door neighbors. We consistently find that exposure to an ethnic outgroup in 1880 increases the likelihood of marriage to a member of that group in later life, while decreasing the likelihood of endogamous marriages. Overall, these findings underscore the potential for childhood experiences to erode ethnic group boundaries.
 </details>
 
 **Non-Compliance in Survey Experiments with Placebo Treatments**.   
