--- a/research.qmd
+++ b/research.qmd
@@ -4,6 +4,9 @@ title: ""
 
 # Publications
 
+[21] **Investigating the reproducibility of the social and behavioural sciences.**
+(with Olivia Miske and others).
+*Nature* in press.
 
 [20] **Military Service and Immigrants’ Assimilation: Evidence from the Vietnam Draft Lotteries**.  
 (with Melissa Lee).
